--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <!-- favicon -->
     <link type="image/png" href="styles/assets/cmh-logo-purple.png" rel="icon">
 </head>
-<body class="home">
+<body class="projects">
     <a href="#maincontent" class="skip-link">Skip to main content</a>
     <!-- Header starts here -->
     <header>
@@ -28,9 +28,8 @@
     </header>   
     <!-- Header ends here -->
     <!-- Main starts here -->
-    <main class="home-main wrapper" id="maincontent">
-        <h1>Hi, I'm <span>Claudia.</span></h1>
-        <h2>I'm a front-end web developer.</h2>
+    <main class="projects-main wrapper" id="maincontent">
+        <h1>COMING SOON</h1>
     </main>
     <!-- Main ends here -->
     <!-- Footer starts here -->
