--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
                         <p class="sr-only">Click me to close navigation</p>
                     </button>
                     <ul class="right-menu clearfix">
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="styles/assets/claudia-mh-ahn-resume.pdf" target="_blank">Resume</a></li>
                     </ul>
                 </div>
@@ -45,7 +43,7 @@
     <!-- Footer starts here -->
     <footer class="wrapper">
         <ul class="footer-icons icons">
-            <li><a href="https://claudiaahn.com" target="_blank" aria-label="Claudia's website"><i aria-hidden class="fas fa-briefcase"></i></a></li>
+            <li><a href="http://claudiaahn.com" target="_blank" aria-label="Claudia's website"><i aria-hidden class="fas fa-briefcase"></i></a></li>
             <li><a href="mailto:claudiamhahn@gmail.com" target="_blank" aria-label="Email Claudia"><i aria-hidden class="fas fa-envelope"></i></a></li>
             <li><a href="https://www.linkedin.com/in/claudiamhahn" target="_blank" aria-label="Go to Claudia's LinkedIn page"><i aria-hidden class="fab fa-linkedin-in"></i></a></li>
             <li><a href="https://github.com/cma129" target="_blank" aria-label="Go to Claudia's Github page"><i aria-hidden class="fab fa-github"></i></a></li>
