mobile landscape mq added

--- a/index.html
+++ b/index.html
@@ -17,19 +17,12 @@
     <a href="#maincontent" class="skip-link">Skip to main content</a>
     <!-- Header starts here -->
     <header>
-        <div class="top-line wrapper clearfix">
+        <div class="top-line wrapper">
             <a href="index.html"><img class="logo" src="styles/assets/cmh-logo-purple.png" alt="CMH"></a>
-            <button class="hamburger"><i class="fas fa-bars"></i><p class="sr-only">Click me to open up hamburger menu</p></button>
             <nav class="menu">
-                <div class="half-screen">
-                    <button class="exit-responsive">
-                        <i class="fas fa-times"></i>
-                        <p class="sr-only">Click me to close navigation</p>
-                    </button>
-                    <ul class="right-menu clearfix">
-                        <li><a href="styles/assets/claudia-mh-ahn-resume.pdf" target="_blank">Resume</a></li>
-                    </ul>
-                </div>
+                <ul class="right-menu">
+                    <li><a href="styles/assets/claudia-mh-ahn-resume.pdf" target="_blank">Resume</a></li>
+                </ul>
             </nav>
         </div>
     </header>   
@@ -55,7 +48,5 @@
     <!-- Footer ends here -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="./script.js"></script> 
 </body>
 </html>
