--- a/index.html
+++ b/index.html
@@ -9,27 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Kaushan+Script&display=swap" rel="stylesheet"> 
     <script src='https://kit.fontawesome.com/0ae09e0157.js' crossorigin='anonymous'></script>
     <!-- favicon -->
-    <link type="image/png" href="styles/assets/cmh-logo-purple.png" rel="icon">
+    <link type="image/png" href="styles/assets/favicon.png" rel="icon">
 </head>
 <body class="home">
     <div id="particles-js"></div>
-    <img class="photo" src="styles/assets/photo.png" alt="Brown-haired girl with a black fedora">
-    <a href="#maincontent" class="skip-link">Skip to main content</a>
+    <img class="photo" src="styles/assets/photo.png" alt="">
     <!-- Header starts here -->
     <header>
         <div class="top-line wrapper">
-            <a href="index.html"><img class="logo" src="styles/assets/cmh-logo-purple.png" alt="CMH"></a>
-            <nav class="menu">
-                <ul class="right-menu">
-                    <li><a href="styles/assets/claudia-mh-ahn-resume.pdf" target="_blank">Resume</a></li>
-                </ul>
-            </nav>
+            <a href="http://claudiaahn.com"><img class="logo" src="styles/assets/logo.png" alt=""></a>
         </div>
     </header>   
     <!-- Header ends here -->
     <!-- Main starts here -->
     <main class="home-main wrapper" id="maincontent">
-        <h1>Hi, I'm <span>Claudia.</span></h1>
+        <h1>Hi, I'm <span><a href="http://claudiaahn.com">Claudia.</a></span></h1>
         <h2>I'm a front-end web developer.</h2>
     </main>
     <!-- Main ends here -->
