--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Claudia Mh Ahn</title>
+    <title>Claudia Ahn</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Kaushan+Script&display=swap" rel="stylesheet"> 
     <script src='https://kit.fontawesome.com/0ae09e0157.js' crossorigin='anonymous'></script>
@@ -37,7 +37,7 @@
             <li><a href="https://www.twitter.com/ahn_claudia" target="_blank" aria-label="Go to Claudia's Twitter page"><i aria-hidden class="fab fa-twitter"></i></a></li>
             <li><a href="https://www.medium.com/@claudiamhahn" target="_blank" aria-label="Go to Claudia's blog"><i aria-hidden class="fab fa-medium-m"></i></a></li>
         </ul>
-        <p>© Claudia Mh Ahn 2020</p>
+        <p>© Claudia Ahn 2020</p>
     </footer>
     <!-- Footer ends here -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
