--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Main starts here -->
     <main class="home-main wrapper" id="maincontent">
         <h1>Hi, I'm <span><a href="http://claudiaahn.com">Claudia.</a></span></h1>
-        <h2>I'm a web developer & designer.</h2>
+        <h2>I'm a front-end web developer.</h2>
     </main>
     <!-- Main ends here -->
     <!-- Footer starts here -->
